# espclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: admin-ui.md  app-patterns.md  apps.md  architecture.md  blob-transfer.md  board-config.md  component-registry.md  components.md  console-chat.md  events.md  hardware-lua.md  lua-api.md  next-phase-plan.md  onboarding.md  ota.md  real-hardware-bench.md  release-process.md  security-and-privacy.md  simulator.md  support-matrix.md  vehicle-control.md  web-flasher.md  web-tools.md  workspace-memory.md
firmware/: CMakeLists.txt  partitions_espclaw.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
firmware/components/esp32-camera/: CMakeLists.txt
firmware/components/espclaw_core/: CMakeLists.txt  idf_component.yml
firmware/components/espclaw_core/include/espclaw/: admin_api.h  admin_ops.h  admin_server.h  admin_ui.h  agent_loop.h  app_patterns.h  app_runtime.h  auth_store.h  behavior_runtime.h  board_config.h  board_profile.h  channel.h  component_runtime.h  config_render.h  console_chat.h  context_runtime.h  control_loop.h  event_watch.h  hardware.h  log_buffer.h  lua_api_registry.h  ota_manager.h  ota_state.h  provider.h  provider_request.h  provisioning.h  runtime.h  session_store.h  storage.h  system_monitor.h  task_policy.h  task_runtime.h  telegram_protocol.h  tool_catalog.h  web_tools.h  workspace.h
firmware/components/espclaw_core/src/: admin_api.c  admin_ops.c  admin_server.c  admin_ui.c  agent_loop.c  app_patterns.c  app_runtime.c  auth_store.c  behavior_runtime.c  board_config.c  board_profile.c  channel.c  component_runtime.c  config_render.c  console_chat.c  context_runtime.c  control_loop.c  event_watch.c  hardware.c  log_buffer.c  lua_api_registry.c  ota_manager.c  ota_state.c  provider.c  provider_request.c  provisioning.c  runtime.c  session_store.c  storage.c  system_monitor.c  task_policy.c  task_runtime.c  telegram_protocol.c  tool_catalog.c  web_tools.c  workspace.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: build_site_wasm.sh  deploy_site_cloudflare.sh  generate_release_manifests.py  real_device_bench.py  use-idf.sh
simulator/: espclaw_simulator.c  runtime_host_shim.c
site/: CNAME  app.js  docs.html  flash.html  index.html  lab.html  simulator.js  styles.css
tests/: simulator_api_test.sh  test_main.c  test_real_device_bench.py  test_release_manifests.py
wasm/: espclaw_browser_runtime.c
