idf_component_register(
  SRCS
    "src/agent_loop.c"
    "src/admin_ops.c"
    "src/app_runtime.c"
    "src/admin_api.c"
    "src/admin_server.c"
    "src/admin_ui.c"
    "src/auth_store.c"
    "src/behavior_runtime.c"
    "src/board_config.c"
    "src/board_profile.c"
    "src/channel.c"
    "src/control_loop.c"
    "src/config_render.c"
    "src/event_watch.c"
    "src/hardware.c"
    "src/ota_manager.c"
    "src/ota_state.c"
    "src/provisioning.c"
    "src/provider.c"
    "src/provider_request.c"
    "src/runtime.c"
    "src/session_store.c"
    "src/storage.c"
    "src/system_monitor.c"
    "src/task_policy.c"
    "src/task_runtime.c"
    "src/telegram_protocol.c"
    "src/tool_catalog.c"
    "src/workspace.c"
  INCLUDE_DIRS "include"
  REQUIRES
    app_update
    bootloader_support
    driver
    esp_adc
    esp_app_format
    esp_event
    esp_http_client
    esp_http_server
    esp_netif
    esp_wifi
    fatfs
    json
    littlefs
    lwip
    lua
    mbedtls
    nvs_flash
    sdmmc
    spi_flash
    wifi_provisioning
)
